# Molecule-Generation

./: .gitignore  README.md  generate.py  optimize_property.py  pyproject.toml  run_train.py  simulate.py  train_model.py  train_moflow.py
VAE/: config.py  job.mpi
VAE/models/: decoder.py  encoder.py  layers.py  vae.py
VAE/scripts/: download_qm9.py  generate.py  train.py
VAE/utils/: data_utils.py
data/: data_frame_parser.py  data_loader.py  data_preprocess.py  smile_to_graph.py  transform_qm9.py  transform_zinc250k.py
models/: basic.py  coupling.py  glow.py  hyperparams.py  model.py  utils.py
results/moflow/: moflow-params.json
ui/: app.py  compute_qm9_metrics.py
ui/static/css/: analysis.css  evaluation.css  style.css
ui/static/js/: analysis.js  evaluation.js  main.js
ui/templates/: analysis.html  evaluation.html  index.html  interpolation.html  learn_models.html
utils/: environment.py  model_utils.py  molecular_metrics.py  sascorer.py  timereport.py
