[project]
name = "mflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "ordered-set>=4.1.0",
    "pandas>=2.2.3",
    "rdkit>=2024.9.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "six>=1.17.0",
    "tabulate>=0.9.0",
    "tensorflow>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
